OnBoarding: added mobile screen media queries, some fixes and font changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         </div>
       </div>
       <div class="content">
-        <p class="upper-text">Welcome to the comproDLS<sup>TM</sup> OnBoarding
+        <p class="upper-text">
+          Welcome to the comproDLS<sup>TM</sup> OnBoarding
           Application for mentors and freshers. Please sign
           in using your organisation email and password.
         </p><br>
@@ -35,7 +36,6 @@
         </p>
       </div>
       <div class="small-form">
-
         <div class="form">
           <div class="form-heading">
             Sign in
@@ -45,7 +45,6 @@
             <input type="email" class="input" placeholder="Email" id="emailInput">
             <!-- <label for="">Password</label> -->
             <input type="password" class="input" placeholder="Password" id="passwordInput">
-
             <a class="forgot-pass" href="#">FORGOT PASSWORD</a>
             <input type="submit" class="login-btn" value="LOGIN">
             <div class="new-member-link">
@@ -58,7 +57,7 @@
         </div>
       </div>
       <div class="small-footer">
-        <p>&copy; 2022 Compro Technologies All Rights Reserved</p>
+        <p>&copy; 2021 Compro Technologies All Rights Reserved</p>
       </div>
     </div>
     <div class="form-container">
@@ -82,7 +81,7 @@
         </form>
       </div>
       <div class="footer">
-        <p>&copy; 2022 Compro Technologies All Rights Reserved</p>
+        <p>&copy; 2021 Compro Technologies All Rights Reserved</p>
       </div>
     </div>
   </div>
