--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>comproDLS Assignment</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
   <div class="main-container">
-    <div class="info-container">
+    <div class="info-container" role="contentinfo">
       <div class="header">
         <div class="upper-heading">
           comproDLS<sup>TM</sup>
         </div>
-        <div class="main-heading">
+        <div class="main-heading" role="heading" aria-label="OnBoarding Application" tabindex="1">
           OnBoarding
           <hr>
         </div>
@@ -25,36 +26,37 @@
         </div>
       </div>
       <div class="content">
-        <p class="upper-text">
+        <p class="upper-text" role="doc-introduction" tabindex="2">
           Welcome to the comproDLS<sup>TM</sup> OnBoarding
           Application for mentors and freshers. Please sign
           in using your organisation email and password.
         </p><br>
-        <p class="bottom-text">
+        <p class="bottom-text" tabindex="3">
           In case you do not have an account, click on "Sign up
           now" to get started.
         </p>
       </div>
-      <div class="small-form">
-        <div class="form">
-          <div class="form-heading">
-            Sign in
-          </div>
-          <form action="#">
-            <!-- <label for="emailInput">Email</label> -->
-            <input type="email" class="input" placeholder="Email" id="emailInput">
-            <!-- <label for="">Password</label> -->
-            <input type="password" class="input" placeholder="Password" id="passwordInput">
-            <a class="forgot-pass" href="#">FORGOT PASSWORD</a>
-            <input type="submit" class="login-btn" value="LOGIN">
-            <div class="new-member-link">
-              Not a member?
-              <a href="#">
-                Request an Account
-              </a>
-            </div>
-          </form>
+      <div class="small-form-box" role="region" aria-label="form">
+        <div class="form-heading" role="heading" tabindex="6">
+          Sign in
         </div>
+        <form class="small-form" action="#">
+          <input type="email" class="input" placeholder="Email" id="emailInput">
+          <p class="password-block">
+            <input type="password" class="input" placeholder="Password" id="passwordInput">
+            <i class="material-symbols-outlined">
+              visibility
+            </i>
+          </p>
+          <a class="forgot-pass" href="#">FORGOT PASSWORD</a>
+          <input type="submit" class="login-btn" value="LOGIN">
+          <div class="new-member-link" role="region" aria-label="Click to Sign Up">
+            Not a member?
+            <a href="#" role="link" >
+              Request an Account
+            </a>
+          </div>
+        </form>
       </div>
       <div class="small-footer">
         <p>&copy; 2021 Compro Technologies All Rights Reserved</p>
@@ -63,20 +65,23 @@
     <div class="form-container">
       <div class="new-member-link">
         Not a member?
-        <a href="#">
+        <a href="#" role="link" tabindex="4">
           Request an Account
         </a>
       </div>
-      <div class="form">
-        <div class="form-heading">
+      <div class="form-box" role="region" aria-label="form">
+        <div class="form-heading" role="heading" tabindex="5">
           Sign in
         </div>
-        <form action="#">
-          <!-- <label for="emailInput">Email</label> -->
+        <form class="form" action="#">
           <input type="email" class="input" placeholder="Email" id="emailInput">
-          <!-- <label for="">Password</label> -->
-          <input type="password" class="input" placeholder="Password" id="passwordInput">
-          <a class="forgot-pass" href="#">FORGOT PASSWORD</a>
+          <p class="password-block">
+            <input type="password" class="input" placeholder="Password" id="passwordInput">
+            <i class="material-symbols-outlined">
+              visibility
+            </i>
+          </p>
+          <a class="forgot-pass" href="#" role="link">FORGOT PASSWORD</a>
           <input type="submit" class="login-btn" value="LOGIN">
         </form>
       </div>
